objects/ALTF__Decision_Criteria_Insight_Card__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Decision_Criteria__c</fullName>
        <label>Altify Decision Criteria</label>
        <referenceTo>ALTF__Decision_Criteria__c</referenceTo>
        <relationshipName>Decision_Criteria_Obstacles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__Insight_Card__c</fullName>
        <label>Altify Insight Card</label>
        <referenceTo>ALTF__Insight_Card__c</referenceTo>
        <relationshipName>Decision_Criteria_Obstacles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Altify Decision Criteria Insight Card</label>
    <nameField>
        <label>Decision Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Decision Criteria Insights</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>